Revert "release code for the cag module"

--- a/registration/views/search.html
+++ b/registration/views/search.html
@@ -1,7 +1,7 @@
 <section class="reg-search-wrapper">
 
     <section class="primary-section-grid">
-        <h2 class="section-title">Filter</h2>
+        <h2 class="section-title">Location</h2>
         <form class="select-file-form">
             <fieldset class="select-file-type" style="padding:2px">
                 <ul ng-repeat="(key, searchDomain) in searchDomains" style="float: left">
@@ -16,8 +16,8 @@
 
     <section class="reg-search">
         <section class="reg-search">
-            <article ng-class="{'search-seperator-l': !showCAGName(), 'search-seperator-cag': showCAGName()}" ng-if="::patientIdentifierSearchConfig.show">
-                <form name="searchByIdForm" ng-submit="searchById()" class="simple-form-ui clearfix" ng-show="!showCAGName()">
+            <article class="search-seperator-l" ng-if="::patientIdentifierSearchConfig.show">
+                <form name="searchByIdForm" ng-submit="searchById()" class="simple-form-ui clearfix">
                     <label for="registrationNumber"><strong>{{ ::'REGISTRATION_LABEL_PATIENT_ID' |
                             translate}}</strong></label>
                     <div class="search-patient-id fl">
@@ -31,23 +31,9 @@
                     </div>
 
                 </form>
-
-                <form name="searchByCAGForm" ng-submit="searchByCAGName()" class="simple-form-ui clearfix" ng-show="showCAGName()">
-                    <label for="cagName"><strong>{{ ::'REGISTRATION_LABEL_CAG_NAME' | translate}}</strong></label>
-                    <div class="search-patient-id fl">
-
-                        <input ng-if="showCAGName()" tabindex="2" class="fl" type="text" id="cagName" ng-model="searchParameters.cagName" focus-me="true" placeholder="{{ ::'REGISTRATION_LABEL_CAG_NAME_PLACEHOLDER' | translate}}">
-                        <div class="reg-srch-btn fl">
-                            <button tabindex="3" type="submit" ng-disabled="!searchParameters.cagName">{{
-                                ::'REGISTRATION_LABEL_SEARCH' | translate}}</button>
-                        </div>
-                    </div>
-
-                </form>
-               
             </article>
 
-            <article class="search-seperator-r" ng-show="!showCAGName()">
+            <article class="search-seperator-r">
                 <form name="searchByNameForm" ng-submit="searchPatients()" class="simple-form-ui">
 
                     <article class="fl">
@@ -114,7 +100,7 @@
 
         <!-- HIE SEARCH LIST -->
         <div ng-if="hieresultsPresent()" class="registraition-search-results-container">
-            <table class="table" ng-show="!showCAGName()">
+            <table class="table">
                 <thead>
                     <tr>
                         <th><strong>Patient Identifier</strong></th>
@@ -158,7 +144,7 @@
         <!-- LOCAL SEARCH LIST -->
 
         <div ng-if="resultsPresent()" infinite-scroll="nextPage()" infinite-scroll-immediate-check="false" infinite-scroll-disabled="noMoreResultsPresent" class="registraition-search-results-container">
-            <table class="table" ng-show="!showCAGName()">
+            <table class="table">
                 <thead>
                     <tr>
                         <th ng-click="sortPatient('identifier'); orderByField='identifier'"><strong>{{
@@ -218,51 +204,6 @@
         </div>
 
         <!-- LOCAL SEARCH LIST -->
-
-        <!-- CAG SEARCH LIST -->
-
-        <div infinite-scroll="nextPage()" infinite-scroll-immediate-check="false" infinite-scroll-disabled="noMoreResultsPresent" class="registraition-search-results-container" ng-show="showCAGName() && cagResults.length!==0">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th ng-click="sortPatient('identifier'); orderByField='identifier'">
-                            <strong>CAG ID</strong>
-                        </th>
-                        <th ng-click="sortPatient('identifier'); orderByField='identifier'">
-                            <strong>CAG Name</strong>
-                        </th>
-                        <th ng-click="sortPatient('identifier'); orderByField='identifier'">
-                            <strong>CAG Description</strong>
-                        </th>
-                        <th ng-click="sortPatient('identifier'); orderByField='identifier'">
-                            <strong>Constituency</strong>
-                        </th>
-                    </tr>
-                </thead> 
-                <tbody>
-                    <tr ng-repeat="result in cagResults | filter: searchParameters.cagName">
-                        <td>
-                            <a href="" ng-click="viewCAG(result.uuid)">CAG-{{$index}}</a>
-                        </td>
-                        <td>
-                            {{result.name}}
-                        </td>
-                        <td>
-                            {{result.description}}
-                        </td>
-                        <td>
-                            {{result.constituency}}
-                        </td>
-
-                        
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <!-- CAG SEARCH LIST -->
-
-
         <div id="loader" ng-show="loadingMoreResults()"></div>
 
         <div class="note-container no-more-results" ng-if="noMoreResultsPresent">
