--- a/registration/views/header.html
+++ b/registration/views/header.html
@@ -2,11 +2,8 @@
         <ul class="top-nav fl">
             <a class="back-btn" accesskey="h" href="../home/index.html" ng-click="onHomeNavigate($event)"><i class="fa fa-home"></i></a>
             <li ng-repeat="extension in ::extensions">
-
-                <a ng-click="goTo(extension.url)" accesskey="{{::extension.shortcutKey | translate}}">
-                    <i class="{{::extension.icon}} fa fa-white small"></i>
-                        <span class="nav-link" ng-bind-html="::extension | titleTranslate"></span>
-                </a>
+                <a ng-click="goTo(extension.url)" accesskey="{{::extension.shortcutKey | translate}}"><i class="{{::extension.icon}} fa fa-white small"></i>
+                    <span class="nav-link" ng-bind-html="::extension | titleTranslate"></span></a>
             </li>
         </ul>
         <div class="reg-header-right fr">
