--- a/appointments/views/manage/newAppointment.html
+++ b/appointments/views/manage/newAppointment.html
@@ -68,7 +68,12 @@
                     <label for="date">
                         {{'APPOINTMENT_DATE' | translate}}<sup class="asterick">*</sup>
                     </label>
-                    <input id="date" type="date" ng-min="isEditMode() && !isEditAllowed()" min="{{today}}" required ng-model="appointment.date" ng-change="appointment.service && checkAvailability()" placeholder="Pick appointment date" ng-disabled="isEditMode() && !isEditAllowed()"/>
+                    <input id="date" type="date" ng-min="isEditMode() && !isEditAllowed()" required ng-model="appointment.date" ng-change="appointment.service && checkAvailability()" placeholder="Pick appointment date" ng-disabled="isEditMode() && !isEditAllowed()"/>
+                    <!-- <input  id="date" type="date" ng-min="isEditMode() && !isEditAllowed()" min="{{today}}" required
+                            ng-model="appointment.date"
+                            ng-change="appointment.service && checkAvailability()"
+                            placeholder="Pick appointment date"
+                            ng-disabled="isEditMode() && !isEditAllowed()"/> -->
                     <span class="slots-remaining"></span>
                 </p>
                 <p class="warning-message" ng-if="warning.appointmentDate">
