--- a/registration/views/cagRegister.html
+++ b/registration/views/cagRegister.html
@@ -101,11 +101,27 @@
             text-decoration: none;
             
         } 
+        .full-screen-spinner {
+            background-color: rgba(0, 0, 0, 0.5);
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /* background-color: rgba(255, 255, 255, 0.8);  */
+            z-index: 999999999; /* high z-index to overlay everything */
+            background: rgba(0,0,0,0.6) url('../images/spinner.gif') no-repeat center center;
+        }
 </style>
-<div class="reg-body-wrapper">
-    <div class="simple-form-ui new-patient">
+
+<div class="reg-body-wrapper">   
+    <div class="simple-form-ui new-patient tab-content">
+        <div class="full-screen-spinner"></div>
         <form name="myForm" class="form-horizontal well" ng-submit="save($event)">
-            <div class="box-container box-container-default">
+            <div class="box-container box-container-default"> 
                 <section>
                     <legend class="registraion_legend first-registraion_legend">
                         <span class="mylegend"><strong>{{::'REGISTRATION_LABEL_CAG_ID' | translate}} : {{cag.uuid}}</strong></span>
@@ -323,7 +339,6 @@
 <script>
     function toggleVisibility(button) {
         var toggleItem = button.parentElement;
-        // console.log(toggleItem);//
         if(toggleItem.style.display){
            toggleItem.style.display = "false";
         }
