add filter to appointment book

--- a/appointments/views/manage/appointmentFilter.html
+++ b/appointments/views/manage/appointmentFilter.html
@@ -35,9 +35,10 @@
         </div>
 
     </div>
-    <div class="appointment-filter-items provider-block">
-        <label>{{::'APPOINTMENT_PROVIDER' |translate}}</label>
-        <multi-select-autocomplete input-items="providers" selected-values="selectedProviders" display-property="'name'" key-property="'uuid'" placeholder="::'APPOINTMENT_ENTER_PROVIDER_NAME_KEY'" load-on-down-arrow="true" auto-complete-min-length="1"></multi-select-autocomplete>
+
+    <div class="appointment-filter-items status-block">
+        <label>Location</label>
+        <multi-select-autocomplete input-items="locationList" selected-values="selectedLocationList" display-property="'name'" key-property="'uuid'" placeholder="'Enter location name'" load-on-down-arrow="true" auto-complete-min-length="1"></multi-select-autocomplete>
 
     </div>
     <div class="appointment-filter-items status-block">
